# OneCompiler

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_all.sh  build_fork.sh
cmake/: SubmodulesConfig.cmake  SubmodulesManager.cmake
examples/: CMakeLists.txt  torch_import_example.cpp
include/OneCompiler/: OneCompiler.h
include/frontend/torch_import/: TorchImporter.h
scripts/: init_submodules.sh
src/: CMakeLists.txt
src/compiler/: CMakeLists.txt  OneCompiler.cpp
src/frontend/: CMakeLists.txt
src/frontend/torch_import/: CMakeLists.txt  TorchImporter.cpp
src/tools/: CMakeLists.txt  onecompiler.cpp
test/: CMakeLists.txt  lit.site.cfg.py.in
test/mlir/: CMakeLists.txt  basic.mlir
test/python/: CMakeLists.txt
